# Trabalho_inst3

./: .gitmodules  README.md  build.sh  setup.sh
src/desafio_labirinto/: README.md
src/desafio_labirinto/desafio_oxebots_erick/: README.md  package.xml  setup.cfg  setup.py
src/desafio_labirinto/desafio_oxebots_erick/desafio_oxebots_erick/: robot_controller.py
src/desafio_labirinto/desafio_oxebots_erick/launch/: maze_solver.launch.yaml
src/desafio_labirinto/desafio_oxebots_erick_interfaces/: CMakeLists.txt  README.md  package.xml
src/desafio_labirinto/desafio_oxebots_erick_interfaces/action/: MoveBase.action
src/desafio_labirinto/docs/: state_machine.puml
